added classes into elements

--- a/position-1/index.html
+++ b/position-1/index.html
@@ -7,33 +7,37 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <main>
-      <div>
-        <div></div>
-        <article>
-          <figure>
+    <main class="wrapper">
+      <div class="card-container">
+        <article class="card">
+          <figure class="card-header">
             <div class="card-bg-img"></div>
-            <img src="" alt="" />
-            <figcaption>
-              <p>
+
+            <div class="profile-container">
+              <img src="./assets/Oval (1).svg" alt="User Profile" class="profile-pic" />
+            </div>
+
+            <figcaption class="user-details">
+              <p class="user-name">
                 Victor Crest
-                <span>26</span>
+                <span class="user-age">26</span>
               </p>
-              <span>London</span>
+              <span class="user-location">London</span>
             </figcaption>
           </figure>
+
           <div class="user-info">
-            <div>
-              <span>80K</span>
-              <span>Follower</span>
+            <div class="info">
+              <span class="info-number">80K</span>
+              <span class="info-label">Followers</span>
             </div>
-            <div>
-              <span>803K</span>
-              <span>Likes</span>
+            <div class="info">
+              <span class="info-number">803K</span>
+              <span class="info-label">Likes</span>
             </div>
-            <div>
-              <span>1.4K</span>
-              <span>Photos</span>
+            <div class="info">
+              <span class="info-number">1.4K</span>
+              <span class="info-label">Photos</span>
             </div>
           </div>
         </article>
