feat: added header inside with nav with ul lists and a links for logo and button element

--- a/position - Landing Page/index.html
+++ b/position - Landing Page/index.html
@@ -12,7 +12,7 @@
         <div class="continer">
           <ul class="top-nav">
             <li>
-              <a href="#"><img src="../position - Landing Page/assets/logo.svg" alt="skilled logo" /></a>
+              <a href="#"><img src="../position - Landing Page/assets/logo.svg" alt="Skilled Logo" /></a>
             </li>
             <li>
               <a href="#"><button class="dark-btn">Get Started</button></a>
