feat: added main section with cards elements

--- a/position - Landing Page/index.html
+++ b/position - Landing Page/index.html
@@ -21,5 +21,63 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-content-container">
+            <div class="hero-text">
+              <h1>Maximize skill, minimize budget</h1>
+              <p>Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+              <a href="#"><button class="hero-btn">Get Started</button></a>
+            </div>
+            <div class="hero-img"><img src="../position - Landing Page/assets/hero-img.png" alt="hero image" /></div>
+          </div>
+        </div>
+      </section>
+
+      <section class="courses container">
+        <div class="courses-grid">
+          <div class="course-card promo-card">
+            <h2>Check out our most popular courses!</h2>
+          </div>
+
+          <div class="course-card">
+            <div class="icon"><img src="./assets/icon-animation.svg" alt="" /></div>
+            <h3>Animation</h3>
+            <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+            <a href="#" class="get-started-link">Get Started</a>
+          </div>
+
+          <div class="course-card">
+            <div class="icon"><img src="./assets/icon-design.svg" alt="" /></div>
+            <h3>Design</h3>
+            <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
+            <a href="#" class="get-started-link">Get Started</a>
+          </div>
+
+          <div class="course-card">
+            <div class="icon"><img src="./assets/icon-photography.svg" alt="" /></div>
+            <h3>Photography</h3>
+            <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
+            <a href="#" class="get-started-link">Get Started</a>
+          </div>
+
+          <div class="course-card">
+            <div class="icon"><img src="./assets/icon-crypto.svg" alt="" /></div>
+            <h3>Crypto</h3>
+            <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
+            <a href="#" class="get-started-link">Get Started</a>
+          </div>
+
+          <div class="course-card">
+            <div class="icon"><img src="./assets/icon-business.svg" alt="" /></div>
+            <h3>Business</h3>
+            <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
+            <a href="#" class="get-started-link">Get Started</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
