--- a/position - Landing Page/index.html
+++ b/position - Landing Page/index.html
@@ -79,5 +79,12 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container footer-content">
+        <img src="./assets/logo-light.svg" alt="logo" />
+        <button class="footer-btn">Get Started</button>
+      </div>
+    </footer>
   </body>
 </html>
