--- a/position - Landing Page/index.html
+++ b/position - Landing Page/index.html
@@ -31,7 +31,17 @@
               <p>Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
               <a href="#"><button class="hero-btn">Get Started</button></a>
             </div>
-            <div class="hero-img"><img src="../position - Landing Page/assets/hero-img.png" alt="hero image" /></div>
+            <div class="hero-img">
+              <img src="../position - Landing Page/assets/hero-img.png" alt="hero image" />
+              <div class="stat-card members-card">
+                <span>Members</span>
+                <strong>29k</strong>
+              </div>
+              <div class="stat-card hours-card">
+                <span>Course hours</span>
+                <strong>1,451</strong>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -43,35 +53,35 @@
           </div>
 
           <div class="course-card">
-            <div class="icon"><img src="./assets/icon-animation.svg" alt="" /></div>
+            <div class="icon"><img src="../position - Landing Page/assets/Frame 25.svg" alt="icon animation" /></div>
             <h3>Animation</h3>
             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
             <a href="#" class="get-started-link">Get Started</a>
           </div>
 
           <div class="course-card">
-            <div class="icon"><img src="./assets/icon-design.svg" alt="" /></div>
+            <div class="icon"><img src="../position - Landing Page/assets/Frame 26.svg" alt="icon design" /></div>
             <h3>Design</h3>
             <p>Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
             <a href="#" class="get-started-link">Get Started</a>
           </div>
 
           <div class="course-card">
-            <div class="icon"><img src="./assets/icon-photography.svg" alt="" /></div>
+            <div class="icon"><img src="../position - Landing Page/assets/Frame 27.svg" alt="icon Photography" /></div>
             <h3>Photography</h3>
             <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
             <a href="#" class="get-started-link">Get Started</a>
           </div>
 
           <div class="course-card">
-            <div class="icon"><img src="./assets/icon-crypto.svg" alt="" /></div>
+            <div class="icon"><img src="../position - Landing Page/assets/Frame 28.svg" alt="icon crypto" /></div>
             <h3>Crypto</h3>
             <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
             <a href="#" class="get-started-link">Get Started</a>
           </div>
 
           <div class="course-card">
-            <div class="icon"><img src="./assets/icon-business.svg" alt="" /></div>
+            <div class="icon"><img src="../position - Landing Page/assets/Frame 29.svg" alt="icon bussiness" /></div>
             <h3>Business</h3>
             <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
             <a href="#" class="get-started-link">Get Started</a>
@@ -82,7 +92,7 @@
 
     <footer class="footer">
       <div class="container footer-content">
-        <img src="./assets/logo-light.svg" alt="logo" />
+        <img src="../position - Landing Page/assets/logo.svg" alt="logo" />
         <button class="footer-btn">Get Started</button>
       </div>
     </footer>
