--- a/position - Landing Page/index.html
+++ b/position - Landing Page/index.html
@@ -7,6 +7,7 @@
     <title>Landing Page</title>
   </head>
   <body>
+    <!-- Header -->
     <header class="overflow-wrapper">
       <nav>
         <div class="continer">
@@ -22,6 +23,7 @@
       </nav>
     </header>
 
+    <!-- Hero Section -->
     <main>
       <section class="hero">
         <div class="container">
@@ -46,6 +48,7 @@
         </div>
       </section>
 
+      <!-- Course Section -->
       <section class="courses container">
         <div class="courses-grid">
           <div class="course-card promo-card">
@@ -90,6 +93,7 @@
       </section>
     </main>
 
+    <!-- Footer -->
     <footer class="footer">
       <div class="container footer-content">
         <img src="../position - Landing Page/assets/logo.svg" alt="logo" />
